tdf#148026 DOCX export: fix link with target frame and anchor

Hyperlink with target frame and anchor didn't work after export.

Change-Id: I84980e30d2e1d6d53cfe201cf4cac60354151aba
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148041
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
Tested-by: László Németh <nemeth@numbertext.org>